--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "json-server": "^0.17.0",
     "next": "12.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
